--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Authors@R: c(
   )
 Description: Provides userfriendly support for qualitative analysis with large language models (LLMs).
 License: GPL-3
-URL: https://SeraphineM.github.io/quallmer
+URL: https://SeraphineM.github.io/quallmer, https://seraphinem.github.io/quallmer/
 Depends:
     R (>= 3.5.0),
     ellmer (>= 0.2.1)
@@ -29,4 +29,3 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 VignetteBuilder: knitr
-
