--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -15,17 +15,21 @@ navbar:
     - github
   components:
     quick-start:
-      text: Quick Start
+      text: Tutorials
       menu:
-      - text: Quick Start Guide
+      - text: Quick start guide
         href: articles/getting-started.html
+      - text: Signing up for an openai API key
+        href: articles/pkgdown/tutorials/openai.html
+      - text: Working with an open-source Ollama model
+        href: articles/pkgdown/tutorials/ollama.html
     reference:
       text: Reference
       href: reference/index.html
     examples:
-      text: Examples
+      text: Predefined tasks
       menu:
-      - text: sentiment
+      - text: Sentiment Analysis
         href: articles/pkgdown/examples/sentiment.html
     github:
       icon: fab fa-github
