--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: quallmer
 Type: Package
-Title: Qualitative analysis with large language models.
+Title: Qualitative analysis with large language models
 Version: 0.1.0
 Authors@R: c(
     person(
