--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,11 @@ License: GPL-3
 URL: https://SeraphineM.github.io/quallmer, https://seraphinem.github.io/quallmer/
 Depends:
     R (>= 3.5.0),
-    ellmer (>= 0.2.1)
+    ellmer (>= 0.2.1),
+    shiny,
+    dplyr,
+    tidyr,
+    irr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.3
