--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,9 @@ export(annotate)
 export(define_task)
 export(sentiment)
 export(stance)
+import(dplyr)
 import(ellmer)
+import(shiny)
+import(tidyr)
+importFrom(irr,kappam.fleiss)
+importFrom(irr,kripp.alpha)
