--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(agreement_app)
 export(annotate)
 export(task)
+export(task_ideology)
 export(task_sentiment)
 export(task_stance)
 import(bslib)
