adding task_salience

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(agreement_app)
 export(annotate)
 export(task)
 export(task_ideology)
+export(task_salience)
 export(task_sentiment)
 export(task_stance)
 import(bslib)
