Define conditional print and [ methods for corpus
Addresses #21

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,3 +29,4 @@ importFrom(irr,kappam.fleiss)
 importFrom(irr,kripp.alpha)
 importFrom(stats,na.omit)
 importFrom(tidyr,pivot_wider)
+importFrom(utils,getFromNamespace)
