--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -21,7 +21,7 @@ navbar:
       menu:
       - text: Quick start guide
         href: articles/getting-started.html
-      - text: Signing up for an openai API key
+      - text: Signing up for an OpenAI API key
         href: articles/pkgdown/tutorials/openai.html
       - text: Working with an open-source Ollama model
         href: articles/pkgdown/tutorials/ollama.html
