Simplify qlm_coded object structure
Just our friendly tibble now (but with benefits!)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,6 @@ export(annotate)
 export(as_qlm_codebook)
 export(qlm_code)
 export(qlm_codebook)
-export(qlm_results)
 export(task)
 export(task_fact)
 export(task_ideology)
@@ -38,3 +37,4 @@ importFrom(irr,kripp.alpha)
 importFrom(stats,na.omit)
 importFrom(tidyr,pivot_wider)
 importFrom(utils,getFromNamespace)
+importFrom(utils,head)
