--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(as_qlm_codebook,qlm_codebook)
 S3method(as_qlm_codebook,task)
 S3method(print,qlm_codebook)
 S3method(print,qlm_coded)
+S3method(print,qlm_comparison)
 S3method(print,task)
 S3method(print,trail_compare)
 S3method(print,trail_record)
@@ -12,6 +13,7 @@ export(annotate)
 export(as_qlm_codebook)
 export(qlm_code)
 export(qlm_codebook)
+export(qlm_compare)
 export(task)
 export(task_fact)
 export(task_ideology)
