Implement qlm_validate() for gold standard validation
Add new function to validate LLM-coded results against gold standard (human-coded or reference) data using classification metrics from the **yardstick** package.

## New Function: qlm_validate()

Validates a qlm_coded object against a gold standard dataset, computing accuracy, precision, recall, F1-score, and Cohen's kappa. Supports:
  - Multiple averaging methods (macro, micro, weighted, none)
  - Per-class metric breakdowns when average = "none"
  - Selection of specific metrics or all metrics
  - Gold standard as either data.frame or qlm_coded object

Returns a qlm_validation object with:
  - Computed metrics (accuracy, precision, recall, f1, kappa)
  - Confusion matrix (yardstick conf_mat object)
  - Per-class metrics (when average = "none")
  - Metadata (n, classes, average method, level, variable, call)

## Files Added

  - R/qlm_validate.R: Main function (~370 lines)
    - qlm_validate() with comprehensive input validation
    - print.qlm_validation() method for formatted output
    - Global variables declaration for yardstick compatibility

  - tests/testthat/test-qlm_validate.R: Test suite (~497 lines)
    - 15 test cases covering 83 assertions
    - Input validation, metric computation, averaging methods
    - Edge cases (NA handling, mismatched IDs, partial overlap)
    - Support for qlm_coded objects as gold standard

## Files Modified

  - DESCRIPTION: Added yardstick to Imports
  - NAMESPACE: Auto-generated exports (qlm_validate, print.qlm_validation)
  - man/: Auto-generated documentation files
  - R/validate.R - now has a superceded badge

## Verification

  - All 83 tests pass
  - R CMD check: 0 errors, 0 warnings, 0 notes
  - Follows all package coding conventions
  - Comprehensive roxygen2 documentation with examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(as_qlm_codebook,task)
 S3method(print,qlm_codebook)
 S3method(print,qlm_coded)
 S3method(print,qlm_comparison)
+S3method(print,qlm_validation)
 S3method(print,task)
 S3method(print,trail_compare)
 S3method(print,trail_record)
@@ -14,6 +15,7 @@ export(as_qlm_codebook)
 export(qlm_code)
 export(qlm_codebook)
 export(qlm_compare)
+export(qlm_validate)
 export(task)
 export(task_fact)
 export(task_ideology)
