--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,7 +36,8 @@ Imports:
     lifecycle,
     bslib,
     stats,
-    htmltools
+    htmltools,
+    yardstick
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
