Add qlm_replicate() and restructure qlm_coded attributes
Implements qlm_replicate() for re-executing coding tasks with optional overrides (model, codebook, parameters) and restructures qlm_coded object   attributes to support provenance tracking.

Major changes:
  - Restructure qlm_coded attributes from flat to hierarchical (run list)
  - Add name parameter to qlm_code() with default "original"
  - Create qlm_replicate() with smart name generation and parent tracking
  - Update print.qlm_coded() to display run information
  - Add validate_by_variable() helper for better error messages
  - Update all tests for new structure (test-qlm_code, test-qlm_compare,
    test-qlm_validate, test-qlm_replicate)

Fixes:
  - Add @importFrom utils modifyList
  - Update all attribute access patterns throughout codebase
  - Improve error messages in qlm_compare() and qlm_validate()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(as_qlm_codebook)
 export(qlm_code)
 export(qlm_codebook)
 export(qlm_compare)
+export(qlm_replicate)
 export(qlm_validate)
 export(task)
 export(task_fact)
@@ -42,3 +43,4 @@ importFrom(stats,na.omit)
 importFrom(tidyr,pivot_wider)
 importFrom(utils,getFromNamespace)
 importFrom(utils,head)
+importFrom(utils,modifyList)
