Update version and description for #27

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: quallmer
 Type: Package
 Title: Qualitative Analysis with Large Language Models
-Version: 0.1.1
+Version: 0.2
 Authors@R: c(
     person(
       "Seraphine F.", "Maerz",
@@ -14,13 +14,14 @@ Authors@R: c(
       role = c("aut"), comment = c(ORCID = "0000-0002-0797-564X")
     )
   )
-Description: Tools for AI-assisted qualitative data annotation using large language
-    models (LLMs). Provides predefined tasks for sentiment analysis, stance
-    detection, ideological scaling, topic salience, and fact-checking, as well as
-    custom task definitions. Includes functions for computing intercoder
-    reliability and gold-standard validation metrics, reproducible annotation
-    trails across multiple LLM configurations, and an interactive 'shiny'
-    application for manual coding and LLM output validation.
+Description: Tools for AI-assisted qualitative data coding using large language
+    models (LLMs). Provides a codebook-based workflow for defining coding
+    instructions and applying them to texts, images, and other data. Includes
+    built-in codebooks for common applications and functions for creating custom
+    codebooks tailored to specific research questions. Supports replication across
+    models and settings, computing inter-coder reliability and gold-standard
+    validation metrics, and an interactive 'shiny' application for manual coding
+    and validation.
 License: GPL-3
 URL: https://seraphinem.github.io/quallmer/
 Depends:
