--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,11 @@ S3method(print,trail_record)
 S3method(print,trail_setting)
 export(annotate)
 export(as_qlm_codebook)
+export(codebook_fact)
+export(codebook_ideology)
+export(codebook_salience)
+export(codebook_sentiment)
+export(codebook_stance)
 export(qlm_code)
 export(qlm_codebook)
 export(qlm_compare)
@@ -29,11 +34,8 @@ export(trail_matrix)
 export(trail_record)
 export(trail_settings)
 export(validate)
-export(validate_app)
-import(bslib)
 import(dplyr)
 import(ellmer)
-import(shiny)
 import(tidyr)
 importFrom(dplyr,bind_rows)
 importFrom(irr,kappa2)
