--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -29,7 +29,7 @@ navbar:
         href: articles/pkgdown/tutorials/built-in-codebooks.html
       - text: Defining custom codebooks
         href: articles/pkgdown/tutorials/custom-codebook.html
-      - text: Using the Agreement App
+      - text: Using the Validate App (quallmer.app)
         href: articles/pkgdown/tutorials/validate.html
       - text: The quallmer trail
         href: articles/pkgdown/tutorials/trail.html
