--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(as_qlm_codebook,task)
 S3method(print,qlm_codebook)
 S3method(print,qlm_coded)
 S3method(print,qlm_comparison)
+S3method(print,qlm_trail)
 S3method(print,qlm_validation)
 S3method(print,task)
 S3method(print,trail_compare)
@@ -21,6 +22,10 @@ export(qlm_code)
 export(qlm_codebook)
 export(qlm_compare)
 export(qlm_replicate)
+export(qlm_trail)
+export(qlm_trail_export)
+export(qlm_trail_report)
+export(qlm_trail_save)
 export(qlm_validate)
 export(task)
 export(task_fact)
