adding the full trail

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,9 @@ S3method(as_qlm_codebook,task)
 S3method(print,qlm_codebook)
 S3method(print,qlm_coded)
 S3method(print,qlm_comparison)
+S3method(print,qlm_robustness)
 S3method(print,qlm_trail)
+S3method(print,qlm_trail_analyses)
 S3method(print,qlm_validation)
 S3method(print,task)
 S3method(print,trail_compare)
@@ -18,8 +20,10 @@ export(qlm_codebook)
 export(qlm_compare)
 export(qlm_replicate)
 export(qlm_trail)
+export(qlm_trail_analyses)
 export(qlm_trail_export)
 export(qlm_trail_report)
+export(qlm_trail_robustness)
 export(qlm_trail_save)
 export(qlm_validate)
 export(task)
