--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -33,7 +33,7 @@ navbar:
         href: articles/pkgdown/tutorials/custom-codebook.html
       - text: Comparing and replicating coded results
         href: articles/pkgdown/tutorials/compare.html
-      - text: The quallmer trail for traceability
+      - text: The quallmer trail
         href: articles/pkgdown/tutorials/trail.html
       - text: Using the Validate App (quallmer.app)
         href: articles/pkgdown/tutorials/validate.html
