--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,6 +41,7 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
 Suggests:
+    janitor,
     knitr,
     rmarkdown,
     testthat (>= 3.0.0),
