--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(as_qlm_codebook)
 export(qlm_code)
 export(qlm_codebook)
 export(qlm_compare)
+export(qlm_humancoded)
 export(qlm_replicate)
 export(qlm_trail)
 export(qlm_trail_export)
