changing qlm_trail to _trace and simplify

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ S3method(print,qlm_codebook)
 S3method(print,qlm_coded)
 S3method(print,qlm_comparison)
 S3method(print,qlm_robustness)
-S3method(print,qlm_trail)
+S3method(print,qlm_trace)
 S3method(print,qlm_validation)
 S3method(print,task)
 S3method(print,trail_compare)
@@ -19,11 +19,11 @@ export(qlm_codebook)
 export(qlm_compare)
 export(qlm_humancoded)
 export(qlm_replicate)
-export(qlm_trail)
-export(qlm_trail_export)
-export(qlm_trail_report)
-export(qlm_trail_robustness)
-export(qlm_trail_save)
+export(qlm_trace)
+export(qlm_trace_export)
+export(qlm_trace_report)
+export(qlm_trace_robustness)
+export(qlm_trace_save)
 export(qlm_validate)
 export(task)
 export(trail_compare)
