--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -33,8 +33,8 @@ navbar:
         href: articles/pkgdown/tutorials/custom-codebook.html
       - text: Comparing and replicating coded results
         href: articles/pkgdown/tutorials/compare.html
-      - text: The quallmer trail
-        href: articles/pkgdown/tutorials/trail.html
+      - text: The quallmer trace
+        href: articles/pkgdown/tutorials/trace.html
       - text: Using the quallmer.app
         href: articles/pkgdown/tutorials/validate.html
     reference:
