--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,7 @@ S3method(as_qlm_codebook,task)
 S3method(print,qlm_codebook)
 S3method(print,qlm_coded)
 S3method(print,qlm_comparison)
-S3method(print,qlm_robustness)
-S3method(print,qlm_trace)
+S3method(print,qlm_trail)
 S3method(print,qlm_validation)
 S3method(print,task)
 S3method(print,trail_compare)
@@ -14,16 +13,16 @@ S3method(print,trail_record)
 S3method(print,trail_setting)
 export(annotate)
 export(as_qlm_codebook)
+export(qlm_archive)
 export(qlm_code)
 export(qlm_codebook)
 export(qlm_compare)
 export(qlm_humancoded)
 export(qlm_replicate)
-export(qlm_trace)
-export(qlm_trace_export)
-export(qlm_trace_report)
-export(qlm_trace_robustness)
-export(qlm_trace_save)
+export(qlm_trail)
+export(qlm_trail_export)
+export(qlm_trail_report)
+export(qlm_trail_save)
 export(qlm_validate)
 export(task)
 export(trail_compare)
